ta-connector/main/default/objects/JobResponse__e/JobResponse__e.object-meta.xml
<CustomObject>
    <description>Platform Event which publishes the Job response from TotalAgility.</description>
    <label>JobResponse</label>
    <pluralLabel>JobResponses</pluralLabel>
</CustomObject>