ta-connector/main/default/objects/JobResponse__e/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <description>Process which initiated the request</description>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>