ta-connector/main/default/objects/JobResponse__e/fields/Response_Message__c.field-meta.xml
<CustomField>
    <fullName>Response_Message__c</fullName>
    <description>Response message</description>
    <label>Response Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>