ta-connector/main/default/objects/JobResponse__e/fields/Response_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Response_Timestamp__c</fullName>
    <description>Timestamp when the Job response was created at TotalAgility</description>
    <label>Response Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>